# fast_api_example

./: README.md  docker-compose.yml  pyproject.toml
api_tutorial/: main.py
api_tutorial/use_cases/: extract_entitites_with_spacy.py
public_endpoint/: Dockerfile  main.py  pyproject.toml
public_endpoint/rest_api/: simple_entities_extraction.py
simple_entities_recognition/: Dockerfile  main.py  pyproject.toml
